--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,7 +2,8 @@ name: Scrape latest data
 
 on:
   schedule:
-    - cron:  '14 2 * * *'
+    - cron:  '14 23 * * *'
+  workflow_dispatch: {}
 
 jobs:
   scheduled:
@@ -21,11 +22,20 @@ jobs:
       run: bundle exec ruby bin/scraper/wikidata.rb | tee data/wikidata.csv
     - name: Generate diff
       run: bundle exec ruby bin/diff.rb | tee data/diff.csv
-    - name: Commit and push if it changed
-      run: |-
-        git config user.name "Automated"
-        git config user.email "actions@users.noreply.github.com"
-        git add data
-        timestamp=$(date -u)
-        git commit -m "Update data: ${timestamp}" || exit 0
-        git push
+    - name: Create pull request
+      id: cpr
+      uses: peter-evans/create-pull-request@v3
+      with:
+        commit-message: Automated update
+        committer: GitHub <noreply@github.com>
+        author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+        signoff: false
+        branch: legislature-compare
+        delete-branch: true
+        title: 'Compare legislature'
+        assignees: tmtmtmtm
+        reviewers: tmtmtmtm
+    - name: Check outputs
+      run: |
+        echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+        echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
